# eventyst

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  new.py  pyproject.toml  requirements.txt  setup.cfg  test.py
docker/: docker-compose-test.yaml  docker-compose.registry.yaml  docker-compose.ui.yaml  docker-compose.yaml
example/: simple.py  simple_model.py
kafka/: configure_run.sh
kafka/kafka-config/: init.txt  kafka.properties
license-templates/: LICENSE.rst  LICENSE.txt
scripts/ci/: autoflake.sh  lint.sh  test.sh
src/eventyst/: __init__.py  __main__.py  _enums.py  _exceptions.py  configuration.py  schema.py
src/eventyst/adapters/: kafka.py
src/eventyst/adapters/aws/: __init__.py  schema_registry.py
src/eventyst/cli/: main.py  styles.py  utilities.py
src/eventyst/core/: application.py  commands.py  dependency.py  events.py  handler_registry.py  message_bus.py
src/eventyst/serialization/: codec.py  naming.py  registry.py  serializers.py
src/eventyst/service_layer/: __init__.py  handler_registry.py  message_bus.py  unit_of_work.py
src/eventyst/utilities/: async_tools.py  avro_schema.py  function_inspection.py  graph.py  log.py  plotting.py
tests/: test_avro_schema.py  test_dependency.py  test_handler_invocation.py  test_handler_registry.py
