[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>"]
description = ""
name = "eventyst"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10.4"
python = ">=3.8.1,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
commitizen = "^2.41.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
