[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.0.1"
version_files = [
  "pyproject.toml:version",
  "src/eventyst/__init__.py"
]

[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>"]
description = ""
name = "eventyst"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.95.1"
pydantic = "^1.10.4"
python = ">=3.8.1,<3.12"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
commitizen = "^2.41.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.6"

[tool.poetry.scripts]
eventyst = "eventyst.__main__:main"
